service/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schaufenster
  name: schaufenster
  namespace: marian
spec:
  replicas: 2
  selector:
    matchLabels:
      app: schaufenster
  template:
    metadata:
      labels:
        app: schaufenster
    spec:
      containers:
      - image: quay.io/netzbegruenung/schaufenster-service:latest
        name: schaufenster-service
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
            memory: "100Mi"
          limits:
            cpu: "1000m"
            memory: "150Mi"
